fix: fixed bullet spacing on mobile

--- a/src/components/Education/Education.module.css
+++ b/src/components/Education/Education.module.css
@@ -103,5 +103,10 @@
   
   .historyItemDetails ul {
     font-size: 17px;
+
+    li span {
+      left: -10px;
+    }
   }
+
 }
