--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -139,5 +139,9 @@
   
   .historyItemDetails ul {
     font-size: 17px;
+
+    li span {
+      left: -10px;
+    }
   }
 }
